Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5022

Strange message or wrong errno on mismatching versions of plugin and server

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Trivial
    • Resolution: Fixed
    • 5.5.33
    • 5.5.34
    • None

    Description

      An attempt to install ha_tokudb.so (from 5.5.33) on 5.5.32 server causes an error message which seems a tiny bit wrong:

      MariaDB [(none)]> install soname 'ha_tokudb';
      ERROR 1126 (HY000): Can't open shared library 'ha_tokudb.so' (errno: 0 API version for STORAGE ENGINE plugin TokuDB not supported by this version of the server)

      The text itself is fine, but the "errno: 0 API version" part looks strange. Either 0 is the errno, or it refers to the API version – all the same, it doesn't seem quite right.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 5m
                5m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.