MDEV-5022 Strange message or wrong errno on mismatching versions of plugin and server

1. use an appropriate errno code
2. put a comma between the errno and the error message text